# typed_event

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: typed_event.py
src/typed_event/: __init__.py
tests/: test_event.py  test_typing.yml
