[project]
name = "typed-event"
version = "1.0.0"
authors=[
    { name="Johannes Loehnert", email="loehnert.kde@gmx.de" },
]
description = "Strongly-typed event decorator"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "http://github.com/loehnertj/typed_event"
Repository = "http://github.com/loehnertj/typed_event"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
