[project]
name = "typed-event"
version = "1.1.0"
authors=[
    { name="Johannes Loehnert", email="loehnert.kde@gmx.de" },
]
description = "Strongly-typed event decorator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "exceptiongroup>=1.2; python_version < '3.11'",
    "typing-extensions>=4.0; python_version < '3.11'",
]

[project.urls]
Homepage = "http://github.com/loehnertj/typed_event"
Repository = "http://github.com/loehnertj/typed_event"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mypy-plugins>=4.0.0",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = false
no_error_summary = true
mypy_path = "src"
allow_untyped_globals = true
allow_untyped_calls = true
